Fix spacing of favourites component for logged out users

--- a/zoo/static/css/page_components.css
+++ b/zoo/static/css/page_components.css
@@ -1324,6 +1324,7 @@ p.love-this {
 }
 p.love-this {
 	padding: 0 0 0 40px;
+	margin-bottom: 1.125em;
 }
 .love-this button:hover,
 .love-this .remove-from button,
